--- a/scss/components/patch.scss
+++ b/scss/components/patch.scss
@@ -310,7 +310,8 @@
         font-size: 13px;
         min-width: 50px;
         white-space: nowrap;
-        background-color: rgba(20,20,20,0.7);
+        background-color:$color-cz;// rgba(20,20,20,0.7);
+        color: $color-ca;
         border-radius: 4px;
 
         &:hover
