--- a/scss/main.scss
+++ b/scss/main.scss
@@ -164,6 +164,7 @@ input[type="text"]
     width: 15px;
     height: 15px;
     padding: 5px !important;
+    border-radius: 4px;
 }
 
 .button,.bluebutton,.greybutton,.smallbutton
